Overflow fixes, survey option maxlength

--- a/client/src/feedbacker-components/survey-edit/survey-edit-card.scss
+++ b/client/src/feedbacker-components/survey-edit/survey-edit-card.scss
@@ -75,6 +75,10 @@
 
   .display-area:not(:empty) {
     margin-top: $spacer;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
+    hyphens: auto;
   }
 
   &.edit-commit {
@@ -105,6 +109,10 @@
 
   h4 {
     display: inline-block;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
+    hyphens: auto;
   }
 }
 
