--- a/client/src/feedbacker-components/survey/survey.scss
+++ b/client/src/feedbacker-components/survey/survey.scss
@@ -13,10 +13,15 @@
 .question {
   p {
     color: $palette-grey;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
+    hyphens: auto;
   }
 }
 
 .options {
+
   @extend .reactions;
   button {
     @extend .reaction;
